welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: value foreach is not a member of Int
for(i<-4){
       ^MethodsDogHouse:26: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:32: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:42: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:52: error: not found: value dogHouse
		dogHouse();		
                ^